--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,35 @@
-# Build
-/dist
-/lib
-/lib-types
-/server
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Development
-node_modules
-*.local
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Cache
-.cache
-.mf
-.rollup.cache
-tsconfig.tsbuildinfo
+# testing
+/coverage
 
-# Logs
-logs
-*.log
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-# Editor
-.vscode/*
-!.vscode/launch.json
-!.vscode/*.code-snippets
+# local env files
+.env*.local
 
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# vercel
+.vercel
 
-# Yarn
-.yarn/*
-!.yarn/releases
+# typescript
+*.tsbuildinfo
+next-env.d.ts
