--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.3.2",
-    "next": "13.5.4",
+    "next": "^13.4.19",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.32.6"
