Fix: can't build with generateStaticParams

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,17 +13,16 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/components/*": ["app/components/*"],
-      "@/content/*": ["/content/*"],
-    },
     "plugins": [
       {
         "name": "next"
       }
     ],
-    
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["app/components/*"],
+      "@/lib/*": ["lib/*"],
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
