--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "y3sterd4y",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -29,4 +32,5 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
+  
 }
