--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20",
+    "@types/node": "20.8.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -32,5 +32,4 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
-  
 }
