--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.1",
+    "@types/mdx": "^2.0.9",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.3.2",
-    "next": "14.0.1", 
-    "node": ">=18.17.0",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "remark": "^15.0.1",
