--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["app/components/*"],
+      "@/icons/*": ["app/components/icons/*"],
       "@/lib/*": ["lib/*"],
     }
   },
