--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.12",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,7 +15,7 @@
     "@types/mdx": "^2.0.9",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
-    "next": "14.0.1",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "remark": "^15.0.1",
