--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "y3sterd4y",
-  "version": "0.2.12",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,18 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.1.3",
-    "@types/mdx": "^2.0.11",
+    "clsx": "^2.1.0",
     "framer-motion": "^10.16.4",
-    "gray-matter": "^4.0.3",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
-    "sharp": "^0.32.6"
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.13.0",
+    "rehype-slug": "^6.0.0",
+    "sharp": "^0.32.6",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -32,7 +30,9 @@
     "eslint": "^8",
     "eslint-config-next": "^14.1.0",
     "postcss": "^8",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "velite": "^0.1.0-beta.12"
   }
 }
