--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "@/components/*": ["app/components/*"],
       "@/icons/*": ["app/components/icons/*"],
       "@/lib/*": ["lib/*"],
+      "#site/content": ["./.velite"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
