--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.0",
     "rehype-slug": "^6.0.0",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
