--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.9.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.3",
+    "@types/mdx": "^2.0.11",
     "clsx": "^2.1.0",
     "framer-motion": "^10.16.4",
+    "gray-matter": "^4.0.3",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-pretty-code": "^0.13.0",
-    "rehype-slug": "^6.0.0",
-    "sharp": "^0.32.6",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
@@ -32,7 +38,6 @@
     "postcss": "^8",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "velite": "^0.1.0-beta.12"
+    "typescript": "^5"
   }
 }
