--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.9.0",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.1.3",
-    "@types/mdx": "^2.0.11",
     "clsx": "^2.1.0",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-format": "^5.0.0",
+    "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1"
   },
