--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
     "next": "^14.1.3",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-format": "^5.0.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-prism": "^2.3.2",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
