--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "y3sterd4y",
-  "version": "0.3.0",
+  "name": "atichat.vercel.app",
+  "version": "0.3.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,19 +12,19 @@
     "clsx": "^2.1.0",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.9.0",
     "next": "^14.1.3",
-    "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-format": "^5.0.0",
     "rehype-highlight": "^7.0.0",
-    "rehype-prism": "^2.3.2",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
-    "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
+    "remark-toc": "^9.0.0",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1"
   },
