--- a/package.json
+++ b/package.json
@@ -11,20 +11,10 @@
   "dependencies": {
     "clsx": "^2.1.0",
     "framer-motion": "^10.16.4",
-    "gray-matter": "^4.0.3",
-    "highlight.js": "^11.9.0",
     "next": "^14.1.3",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-format": "^5.0.0",
-    "rehype-highlight": "^7.0.0",
-    "rehype-stringify": "^10.0.0",
-    "remark": "^15.0.1",
-    "remark-gfm": "^4.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.0",
-    "remark-toc": "^9.0.0",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1"
   },
