--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
-    "framer-motion": "^10.16.4",
     "next": "^14.2.0",
     "next-mdx-remote": "^4.4.1",
+    "next-view-transitions": "^0.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.2",
