--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "framer-motion": "^11.2.9",
     "next": "^14.2.0",
     "next-mdx-remote": "^4.4.1",
     "next-view-transitions": "^0.1.1",
