--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atichat.vercel.app",
-  "version": "0.4.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.9",
+    "framer-motion": "^11.2.13",
+    "gsap": "^3.12.5",
     "next": "^14.2.0",
     "next-mdx-remote": "^4.4.1",
     "next-view-transitions": "^0.1.1",
