--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.13",
+    "geist": "^1.3.1",
     "gsap": "^3.12.5",
     "next": "^14.2.0",
     "next-mdx-remote": "^4.4.1",
