--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["app/components/*"],
+      "@/common/*": ["app/components/common/*"],
       "@/icons/*": ["app/components/icons/*"],
       "@/ui/*": ["app/components/ui/*"],
       "@/lib/*": ["lib/*"],
