--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tsparticles/engine": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.3.2",
     "geist": "^1.3.1",
     "lucide-react": "^0.408.0",
