--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "baseUrl": ".",
     "paths": {
       "@/common/*": ["app/components/common/*"],
+      "@/mdx/*": ["app/components/mdx/*"],
       "@/icons/*": ["app/components/icons/*"],
       "@/ui/*": ["app/components/ui/*"],
       "@/lib/*": ["lib/*"],
