--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@tsparticles/engine": "^3.5.0",
+    "@vercel/blob": "^0.25.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.3.0",
